--- a/ApplicationMarcassin/ApplicationMarcassin.csproj
+++ b/ApplicationMarcassin/ApplicationMarcassin.csproj
@@ -72,6 +72,9 @@
     <Compile Include="CreateCompetence.xaml.cs">
       <DependentUpon>CreateCompetence.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CreationEmploye.xaml.cs">
+      <DependentUpon>CreationEmploye.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Groupe.xaml.cs">
       <DependentUpon>Groupe.xaml</DependentUpon>
     </Compile>
@@ -86,11 +89,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="CreationEmploye.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Groupe.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ListViewCompetence.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ListViewEmploye.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -106,6 +117,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ListViewEmploye.xaml.cs">
+      <DependentUpon>ListViewEmploye.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ListViewGroup.xaml.cs">
       <DependentUpon>ListViewGroup.xaml</DependentUpon>
     </Compile>
@@ -113,7 +127,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Menu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ModificationCompetence.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModificationEmploye.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -123,8 +145,14 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menu.xaml.cs">
+      <DependentUpon>Menu.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ModificationCompetence.xaml.cs">
       <DependentUpon>ModificationCompetence.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ModificationEmploye.xaml.cs">
+      <DependentUpon>ModificationEmploye.xaml</DependentUpon>
     </Compile>
     <Compile Include="ModificationGroupe.xaml.cs">
       <DependentUpon>ModificationGroupe.xaml</DependentUpon>
