--- a/ApplicationMarcassin.DAL/App.config
+++ b/ApplicationMarcassin.DAL/App.config
@@ -15,6 +15,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="BBD_projetEntities" connectionString="metadata=res://*/BBD.csdl|res://*/BBD.ssdl|res://*/BBD.msl;provider=System.Data.SqlClient;provider connection string='data source=DESKTOP-Q5NEN0G\SQLB2;initial catalog=&quot;BBD projet&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="BBD_projetEntities" connectionString="metadata=res://*/BBD.csdl|res://*/BBD.ssdl|res://*/BBD.msl;provider=System.Data.SqlClient;provider connection string='data source=DESKTOP-Q5NEN0G\SQLB2;initial catalog=&quot;BBD projet&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />--><add name="BBD_projetEntities" connectionString="metadata=res://*/BBD.csdl|res://*/BBD.ssdl|res://*/BBD.msl;provider=System.Data.SqlClient;provider connection string='data source=DESKTOP-Q5NEN0G\SQLB2;initial catalog=&quot;BBD projet&quot;;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
