--- a/ApplicationMarcassin/ApplicationMarcassin.csproj
+++ b/ApplicationMarcassin/ApplicationMarcassin.csproj
@@ -179,6 +179,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="PageConnexion.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Menu.xaml.cs">
@@ -198,6 +202,9 @@
     </Compile>
     <Compile Include="ModificationLangue.xaml.cs">
       <DependentUpon>ModificationLangue.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="PageConnexion.xaml.cs">
+      <DependentUpon>PageConnexion.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -237,6 +244,9 @@
       <Project>{e243a757-6dd6-404c-aeb8-bdda530e6835}</Project>
       <Name>ApplicationMarcassin.DAL</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="logo_marcassin.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
